# company_annouce

./: .coze  .dockerignore  .env.docker.example  .env.example  .gitignore  ADMIN-HOME-REFACTOR.md  ADMIN-README.md  CANT_ACCESS_LOCALHOST.md  COLLEAGUE-RESPONSES-FIX.md  DEPLOYMENT_CHOICE.md  DOCKER_DEPLOYMENT.md  DOCKER_DEPLOYMENT_GUIDE.md  DOWNLOAD.md  DOWNLOAD_GUIDE.md  Dockerfile  EMPLOYEE-MANAGEMENT.md  GUIDE.md  HOME-PAGINATION-FIX.md  LOCAL-DEVELOPMENT-GUIDE.md  NO_LOCALHOST.md  PAGINATION-README.md  POSTGRESQL-MIGRATION.md  QUICKSTART.md  QUICK_FIX.md  README.md  README_DOWNLOAD.md  RENDER_CHECKLIST.md  RENDER_DEPLOYMENT.md  RENDER_QUICKREF.md  SQLITE-TO-POSTGRESQL-MIGRATION.md  TROUBLESHOOTING.md  check_db.py  docker-compose.yml  main.py  migrate_db.py  populate_db.py  pyproject.toml  render-docker.yaml  render.yaml  setup.sh  (+3 more)
.github/: BADGES.md  README_UPDATE.md  WORKFLOWS_SUMMARY.md
backend/: .dockerignore  .env  .env.example  Dockerfile  create_database.sql  database.py  init_admin.py  main.py  models.py  optimize_database.py  requirements.txt  seed_data.py
backend/api/: auth.py  (+6 more)
data/: check_db.py  company.db  migrate_db.py  migrate_postgres.py  populate_db.py
docs/: DATABASE_OPERATIONS.md  DATABASE_SETUP.md  IMPROVEMENTS_SUMMARY.md  PROJECT_GUIDE.md  邮件发送配置快速指南.md  邮件发送配置说明.md
frontend/: .dockerignore  Dockerfile  diagnostic.html  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
github_workflow/: GITHUB_ACTIONS_SETUP_COMPLETE.md  README.md  labeler.yml  pull_request_template.md
scripts/: clear_postgres.py  (+1 more)
(+44 files in other folders)
